--- a/success.html
+++ b/success.html
@@ -223,7 +223,7 @@
         async function sendTelegramNotification(orderId, userName) {
             const botToken = '8311976506:AAHCMdrwWzHbKYPVxItoiRXFg0hvppS_26c';
             const chatIds = ['5165964724', '5765135287'];
-            const adminLink = 'https://setupguru.shop/admin-orders.html';
+            const adminLink = 'https://setupguru.shop/admin.html';
             
             const messageText = `🎉 New Order Alert!\n\nOrder ID: #${orderId}\nUser: ${userName}\n\nView and manage orders here:\n${adminLink}`;
             
