--- a/index.html
+++ b/index.html
@@ -368,13 +368,13 @@
         }
 
         .slider-container {
-            position: relative;
-            max-width: 800px; /* Adjusted for square shape */
-            margin: 0 auto;
-            overflow: hidden;
-            border-radius: 15px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-        }
+    position: relative;
+    max-width: 1000px; /* Adjusted for 16:9 ratio */
+    margin: 0 auto;
+    overflow: hidden;
+    border-radius: 15px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+}
 
         .slider {
             display: flex;
@@ -388,10 +388,10 @@
         
         /* MODIFIED: Image is now square */
         .slide img {
-            width: 100%;
-            aspect-ratio: 1 / 1;
-            object-fit: cover;
-        }
+    width: 100%;
+    aspect-ratio: 16 / 9;
+    object-fit: cover;
+}
 
         .slide-content {
             position: absolute;
@@ -482,10 +482,10 @@
         }
 
         .product-image {
-            height: 200px;
-            width: 100%;
-            object-fit: cover;
-        }
+    width: 100%;
+    aspect-ratio: 16 / 9;
+    object-fit: cover;
+}
 
         .product-info {
             padding: 20px;
@@ -1012,8 +1012,9 @@
             <div class="story-content">
                 <div class="story-text fade-in">
                     <h2>Our Story</h2>
-                    <p>At SetupGuru, we believe that your workspace should be a reflection of your ambitions. Founded in 2020, our mission has been to provide premium, thoughtfully designed products that transform ordinary spaces into extraordinary environments.</p>
-                    <p>Every item in our collection is carefully curated to enhance productivity, inspire creativity, and elevate your daily routine. We partner with artisans and innovators worldwide to bring you tools that don't just function beautifully but also inspire greatness.</p>
+                    <p><p>At SetupGuru, we believe that your workspace should be a reflection of your ambitions. Founded in 2025 by <strong>Aryan Soni</strong> and <strong>Rao Jatin</strong>, our mission is to provide premium, thoughtfully designed products that transform ordinary spaces into extraordinary environments.</p>
+<p>Every item in our collection is carefully curated to enhance productivity, inspire creativity, and elevate your daily routine. Discover tools that blend beautiful design with seamless functionality, and build the extraordinary workspace you deserve.</p>
+<p>Explore the collection at <a href="https://setupguru.shop">setupguru.shop</a></p>
                 </div>
                 
                 <div class="stats-grid fade-in">
