--- a/support.html
+++ b/support.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>SETUP GURU- Support Chat</title>
+    <title>IITM BS HUB - Support Chat</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -169,10 +169,10 @@
             <a href="index.html" class="mr-3 sm:mr-4 text-white hover:bg-white/20 rounded-full w-8 h-8 sm:w-10 sm:h-10 flex items-center justify-center">
                 <i class="fas fa-arrow-left text-sm sm:text-base"></i>
             </a>
-            <img src="https://i.ibb.co/hRBZFSS3/1758331953202.jpg" alt="Logo" class="h-8 w-8 sm:h-10 sm:w-10 rounded-full mr-2 sm:mr-3 border-2 border-white/50">
+            <img src="https://i.ibb.co/vxp4pdwC/IITM-BS-Hub.png" alt="Logo" class="h-8 w-8 sm:h-10 sm:w-10 rounded-full mr-2 sm:mr-3 border-2 border-white/50">
             <div>
                 <div class="flex items-center">
-                    <h1 class="text-base sm:text-lg font-bold">SETUP GURU Support</h1>
+                    <h1 class="text-base sm:text-lg font-bold">IITM BS HUB Support</h1>
                     <i class="fas fa-check-circle text-blue-400 ml-2 text-xs sm:text-sm" title="Verified"></i>
                 </div>
                 <p class="text-xs text-green-300">Online</p>
@@ -335,7 +335,7 @@
             
             const avatarHTML = isUserMessage
                 ? `<img src="${currentUser?.avatar || data.userAvatar}" class="${avatarSize} rounded-full flex-shrink-0" alt="User Avatar">`
-                : `<img src="https://i.ibb.co/hRBZFSS3/1758331953202.jpg" class="${avatarSize} rounded-full flex-shrink-0" alt="Support Avatar">`;
+                : `<img src="https://i.ibb.co/vxp4pdwC/IITM-BS-Hub.png" class="${avatarSize} rounded-full flex-shrink-0" alt="Support Avatar">`;
 
             const messageHTML = `
                 <div class="flex items-end gap-2 ${containerClass} message-animate-in">
