--- a/admin.html
+++ b/admin.html
@@ -208,10 +208,6 @@
     <div class="container">
         <h1>WELCOME ARYAN SIR</h1>
         <div class="button-grid">
-            <a href="admin-index.html" class="button">
-                <div class="button-icon">🔘</div>
-                MAIN HOME PAGE CONTROL 
-            </a>
             <a href="admin-success.html" class="button">
                 <div class="button-icon">🔔</div>
                 ORDERS YAHA PE SHOW HONGE
@@ -223,6 +219,10 @@
             <a href="items-admin.html" class="button">
                 <div class="button-icon">🛒</div>
                 ITEMS YAHA SE ADD KARO
+            </a>
+            <a href="coupons.html" class="button">
+                <div class="button-icon">🔔</div>
+                COUPONS YAHA SE ADD KARO
             </a>
         </div>
     </div>
