--- a/success.html
+++ b/success.html
@@ -60,6 +60,29 @@
         .btn-primary { background-color: var(--primary-color); color: white; border-color: var(--primary-color); }
         .btn-secondary { background-color: transparent; color: var(--primary-color); border-color: var(--primary-color); }
         .btn-danger { background-color: transparent; color: #e74c3c; border-color: #e74c3c; }
+        
+        /* Mobile Responsive Styles */
+        @media (max-width: 768px) {
+            .main-header { padding: 1rem; flex-direction: column; text-align: center; }
+            .main-header h1 { font-size: 1.4rem; margin-top: 0.5rem; }
+            .success-container { margin: 1rem auto; padding: 0 1rem 1rem 1rem; }
+            #receipt-content { padding: 1.5rem; }
+            .receipt-grid { grid-template-columns: 1fr; gap: 1rem; }
+            .action-buttons { flex-direction: column; align-items: center; gap: 0.8rem; }
+            .action-btn { width: 100%; max-width: 280px; justify-content: center; padding: 1rem 1.5rem; font-size: 1rem; }
+            .grand-total { font-size: 1.3rem; text-align: center; }
+            .items-list li { flex-direction: column; align-items: flex-start; gap: 0.5rem; }
+        }
+        
+        @media (max-width: 480px) {
+            .main-header { padding: 0.8rem; }
+            .main-header h1 { font-size: 1.2rem; }
+            .success-container { margin: 0.5rem auto; padding: 0 0.5rem 0.5rem 0.5rem; }
+            #receipt-content { padding: 1rem; }
+            .header-icon { width: 40px; height: 40px; font-size: 1.2rem; }
+            .action-btn { padding: 0.9rem 1.2rem; font-size: 0.95rem; }
+            .detail-box p { font-size: 0.9rem; }
+        }
     </style>
 </head>
 <body>
