--- a/track.html
+++ b/track.html
@@ -506,7 +506,7 @@
                     <button class="action-btn" onclick="window.print()">
                         <i class="fas fa-print"></i> Print Details
                     </button>
-                    <a href="mailto:support@setupguru.com" class="action-btn">
+                    <a href="support.html" class="action-btn">
                         <i class="fas fa-envelope"></i> Contact Support
                     </a>
                     <button class="action-btn" onclick="shareOrder()">
