--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="gPOH9rwcZ_yQCDNbGsHlxMSXFR96DOzWqE_UleRUMaU" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SetupGuru - Your Masterpiece Workspace</title>
@@ -1545,4 +1546,5 @@
     });
     </script>
 </body>
+
 </html>
