--- a/support.html
+++ b/support.html
@@ -771,7 +771,7 @@
             showTyping();
 
             try {
-                const response = await fetch('/chat', {
+                const response = await fetch('/index.php', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
